# PaperBanana

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: plot_task.json  reference_pool.json  task.json
paperbanana/: __init__.py  agents.py  cli.py  dashboard.py  graph.py  prompts.py  schema.py  style_guides.py  utils.py
tests/: test_pipeline_mock.py  test_reference_images.py
